# oqboost-2.0

./: .gitignore  LICENSE  README.md  README_pypi.md  pyproject.toml  setup.py
.github/workflows/: tests.yml  wheels.yml
cpp/: build.sh  oqboost_core.cpp
docs/: DESIGN.md  MODEL.md  ROADMAP.md  benchmarks.md  explainability.md  installation.md  optuna_params.json  quickstart.md  theory.md
docs/api/: classifier.md  plotting.md  regressor.md
docs/examples/: binary.md  explainability.md  multiclass.md  regression.md
docs/guides/: categorical.md  early_stopping.md  monotonic.md  multiclass.md  warm_start.md
docs/internals/: algorithm.md  lob.md  roadmap.md
oqboost/: __init__.py  _encoders.py  _sklearn.py  plot.py
scripts/: benchmark.py  benchmark_optuna.py  datasets.py  decision_boundary.py  explain_demo.py  model_similarity.py  models.py  optimize.py  theory_validation.py  tuning.py
tests/: test_functional.py  test_sklearn_compliance.py
